// main.community.tag-service grpc api proto file.
// discovery id: community.service.tag.
// version: v1.
syntax = "proto3";
package community.service.tag.v1;
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "v1";

message Tag {
    int64 id = 1 [(gogoproto.jsontag) = "id"];
    int32 type = 2 [(gogoproto.jsontag) = "type"];
    string name = 3 [(gogoproto.jsontag) = "name"];
    string cover = 4 [(gogoproto.jsontag) = "cover"];
    string head_cover = 5 [(gogoproto.jsontag) = "head_cover"];
    string content = 6 [(gogoproto.jsontag) = "content"];
    string short_content = 7 [(gogoproto.jsontag) = "short_content"];
    int32 verify = 8 [(gogoproto.jsontag) = "-"];
    int32 attr = 9 [(gogoproto.jsontag) = "-"];
    int32 attention = 10 [(gogoproto.jsontag) = "attention"];
    int32 state = 11 [(gogoproto.jsontag) = "-"];
    int64 sub = 12 [(gogoproto.jsontag) = "sub"];
    int64 bind = 13 [(gogoproto.jsontag) = "bind"];
    int64 ctime = 14 [(gogoproto.jsontag) = "ctime", (gogoproto.casttype) = "go-common/library/time.Time"];
    int64 mtime = 15 [(gogoproto.jsontag) = "-", (gogoproto.casttype) = "go-common/library/time.Time"];
}

message Resource {
    int64 id = 1 [(gogoproto.jsontag) = "id"];
    int64 oid = 2 [(gogoproto.jsontag) = "oid"];
    int32 type = 3 [(gogoproto.jsontag) = "type"];
    int64 tid = 4 [(gogoproto.jsontag) = "tid"];
    int64 mid = 5 [(gogoproto.jsontag) = "mid"];
    int32 role = 6 [(gogoproto.jsontag) = "role"];
    int32 like = 7 [(gogoproto.jsontag) = "like"];
    int32 hate = 8 [(gogoproto.jsontag) = "hate"];
    int32 state = 9 [(gogoproto.jsontag) = "state"];
    int32 attr = 10 [(gogoproto.jsontag) = "attr"];
    int64 ctime = 11 [(gogoproto.jsontag) = "ctime", (gogoproto.casttype) = "go-common/library/time.Time"];
    int64 mtime = 12 [(gogoproto.jsontag) = "-", (gogoproto.casttype) = "go-common/library/time.Time"];
}